# skynas

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: README.md  ci.yml  coverage.yml  release.yml
docs/: README.zh.md  websocket-logging-verification.md
docs/plans/: 2026-02-27-server-logging-websocket-progress-design.md
src/: main.rs  startup.rs  thumbnail.rs
src/auth/: mod.rs
src/cli/: mod.rs
src/config/: mod.rs
src/converter/: mod.rs
src/db/: mod.rs
src/mdns/: mod.rs
src/models/: mod.rs
src/notify/: mod.rs
src/qr/: mod.rs
src/server/: admin.rs  mod.rs  photos.rs  upload.rs  uploads.rs
src/server/static/: index.html
src/sync/: mod.rs
src/websocket/: mod.rs
